--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $(window).resize(function(){
             <a class="nav-link active title_main" href="#adriana">adriana <span class="navspan">GUERRERO</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active title_second" href="#gallery2">galería</a>
+            <a class="nav-link active title_second" href="#galeria">galería</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active title_second" href="#contacto">contacto</a>
@@ -224,26 +224,26 @@ $(window).resize(function(){
         </div>
       </div>
     </div>
-    <div id="gallery2" class="section3 s10">
-      <div id="demo2" class="carousel slide" data-ride="carousel">
-        <ul class="carousel-indicators item_s8">
-          <li data-target="#demo2" data-slide-to="0" class="active"></li>
-          <li data-target="#demo2" data-slide-to="1"></li>
-        </ul>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/g10.jpg" alt="" width="1100" height="500">
-            <div class="carousel-caption">
+      <div id="gallery2" class="section3 s10">
+        <div id="demo2" class="carousel slide" data-ride="carousel">
+          <ul class="carousel-indicators item_s8">
+            <li data-target="#demo2" data-slide-to="0" class="active"></li>
+            <li data-target="#demo2" data-slide-to="1"></li>
+          </ul>
+          <div id="galeria" class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/g10.jpg" alt="" width="1100" height="500">
+              <div class="carousel-caption">
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/g11.jpg" alt="" width="1100" height="500">
-            <div class="carousel-caption">
+            <div class="carousel-item">
+              <img src="img/g11.jpg" alt="" width="1100" height="500">
+              <div class="carousel-caption">
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <div class="section11 col-12 col-md-12">
       <h1>REMODELACIÓN, AMBIENTACIÓN, MONTAJE</h1>
     </div>
