--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $(window).resize(function(){
       <p class="txt_imgmain">Diseño y <br> Ambientación</p>
       <p class="txt_imgsecond">40 años armonizando <br> espacios</p>
       <br>
-      <div class="catalogo col-4"> &nbsp;</div>
+      <a class="catalogodiv" href="#portafolio"><div class="catalogo col-4"> &nbsp;</div></a>
     </div>
   </div>
   <div class="section2">
