--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <header>
@@ -23,7 +23,7 @@
     <br>
     <p>Visitenos en San Rafel de Escazú, centro comercial Los Pinos</p>
   </div>
-  <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav justify-content-end navbar-inverse" data-spy="affix" data-offset-top="10">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav justify-content-end navbar-inverse" data-spy="affix" data-offset-top="20">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,19 +31,19 @@
       <div class="container justify-content-center">
         <ul class="nav navbar-nav flex-fill justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active title_second" href="#portafolio">portafolio</a>
+            <a class="nav-link active title_second" href="#portafolio">PORTAFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active title_second" href="#historia">mi historia</a>
+            <a class="nav-link active title_second" href="#historia">MI HISTORIA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active title_main" href="#adriana">adriana <span class="navspan">GUERRERO</span></a>
+            <a class="nav-link active title_main" href="#adriana"><span class="navspan">ADRIANA GUERRERO</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active title_second" href="#galeria">galería</a>
+            <a class="nav-link active title_second" href="#galeria">GALERÍA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active title_second" href="#contacto">contacto</a>
+            <a class="nav-link active title_second" href="#contacto">CONTACTO</a>
           </li>
         </ul>
       </div>
@@ -51,15 +51,22 @@
   </nav>
   <div class="section1">
     <div class="txt_section1">
-      <p class="txt_imgmain">Diseño y <br> Ambientación</p>
-      <p class="txt_imgsecond">40 años armonizando <br> espacios</p>
+      <p class="txt_imgmain">DISEÑO Y <br> AMBIENTACIÓN</p>
       <br>
       <a class="catalogodiv" href="#portafolio"><div class="catalogo col-4"> &nbsp;</div></a>
     </div>
   </div>
   <div class="section2">
     <br>
-    <p>"el buen diseño consiste en convertir sueños en realidad"<br> — Jhon Saladino — </p>
+    <p>"Cada espacio merece un brillo único, que al entrar digas: ¡es espectacular!
+      <br>
+      El hogar es el mejor espacio para invertir porque es donde
+      <br>
+      mejores recuerdos compartimos con la familia"
+      <br>
+      <br>
+      — ADRIANA GUERRERO —
+    </p>
     <br>
   </div>
   <div id="portafolio" class="section3">
@@ -73,27 +80,27 @@
       </ul>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/g2.png" alt="" width="1100" height="500">
+          <img src="img/1.png" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/g3.png" alt="" width="1100" height="500">
+          <img src="img/2.png" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/g4.png" alt="" width="1100" height="500">
+          <img src="img/3.png" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/g5.png" alt="" width="1100" height="500">
+          <img src="img/4.png" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/g1.png" alt="" width="1100" height="500">
+          <img src="img/5.png" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
@@ -110,13 +117,13 @@
   <div class="section2 col-12">
     <br>
     <br>
-    <p>REMODELACIÓN, AMBIENTACIÓN, MONTAJE</p>
+    <p class="frase">REMODELACIÓN, AMBIENTACIÓN, BUEN GUSTO</p>
     <br>
     <br>
   </div>
   <div id="historia" class="container section4 col-12 col-md-12">
     <br>
-    <h1>ADRIANA</h1>
+    <h1>ADRIANA GUERRERO</h1>
     <br>
     <div class="row wrapper justify-content-center">
       <div class="elemento image-wrapper col-12 col-md-6">
@@ -126,7 +133,7 @@
         <img class="img_fg" src="img/seccon1.2.jpg" alt="">
       </div>
     </div>
-    <div class="elemento_txt col-sm-12 col-md-2"><span>EMPRESARIA</span><br> innovación y creación<br></div>
+    <div class="elemento_txt col-sm-12 col-md-2"><span>EMPRESARIA</span><br> madre apasionada<br></div>
   </div>
   <div class="section5 col-12 col-md-12">
     <div class="row wrapper justify-content-center">
@@ -136,181 +143,144 @@
         </div>
         <div id="imgbox" class="">
           <br>
-          <h5>CADA DETALLE CUENTA</h5>
-          <p>Mezclando texturas, colores y materiales creamos ambientes para relajarse, con
-            corrientes de energía limpia y viva que armonizan según los gustos de cada cliente.</p>
-          </div>
+          <h5>FAMILIAR Y FUNCIONAL</h5>
+          <p>Ambientamos especialmente para crear un espacio acogedor y funcional para todos los miembros de la familia.</p>
         </div>
-        <div class="elemento image-wrapper col-10 col-md-2">
-          <p>&nbsp;</p>
+      </div>
+      <div class="elemento image-wrapper col-10 col-md-2">
+        <p>&nbsp;</p>
+      </div>
+      <div class="elemento_s5 image-wrapper col-10 col-md-4">
+        <div id="imgbox" class="">
+          <img src="img/seccion1.4.jpg" alt="">
         </div>
-        <div class="elemento_s5 image-wrapper col-10 col-md-4">
-          <div id="imgbox" class="">
-            <img src="img/seccion1.4.jpg" alt="">
-          </div>
-          <br>
-          <div id="imgbox" class="">
-            <h5>KONFORT</h5>
-            <p>Más de 40 años de trayectoria en el mercado nacional e internacional.
-              Se ha consolidado a partir de la fabricación de productos exclusivos de alta calidad, así
-              como por brindar un servicio personalizado.
-            </p>
-          </div>
+        <br>
+        <div id="imgbox" class="">
+          <h5>KONFORT</h5>
+          <p>Más de 35 años de trayectoria en el mercado nacional e internacional.
+            Se ha consolidado a partir del diseño y fabricación de productos exclusivos.
+          </p>
         </div>
       </div>
     </div>
-    <div id="adriana" class="container section4 col-12 col-md-12">
-      <br>
-      <br>
-      <h1>INTERIORISTA</h1>
-      <br>
-      <div class="row wrapper justify-content-center">
-        <div class="elemento image-wrapper col-12 col-md-6">
-          <img class="img_fg" src="img/Seccion3.1.jpg" alt="">
-        </div>
-        <div class="elemento image-wrapper col-12 col-md-6">
-          <img class="img_fg" src="img/Seccion3.2.jpg" alt="">
-        </div>
-      </div>
-      <div class="elemento_txt2 col-sm-12 col-md-3"><span>MAMÁ Y EMPRESARIA</span><br> espacios prácticos y amigables<br></div>
-    </div>
-    <div class="container section4 col-12 col-md-12">
-      <br>
-      <br>
-      <h1>DISEÑADORA</h1>
-      <br>
-      <div class="row wrapper justify-content-center">
-        <div class="elemento image-wrapper col-12 col-md-6">
-          <img class="img_fg" src="img/Seccion3.3.jpg" alt="">
-        </div>
-        <div class="elemento image-wrapper col-12 col-md-6">
-          <img class="img_fg" src="img/Seccion3.4.jpg" alt="">
-        </div>
-      </div>
-      <div class="elemento_txt2 col-sm-12 col-md-3"><span>PERSONALIZACIÓN</span><br> diseño y armonía a la medida<br></div>
-    </div>
-    <div class="section5 col-12 col-md-12 s9">
-      <div class="row wrapper justify-content-center">
-        <div class="elemento_s5 image-wrapper col-10 col-md-4">
-          <div id="imgbox" class="">
-            <img src="img/Seccion2.1.jpg" alt="">
-          </div>
-          <br>
-          <div id="imgbox" class="">
-            <h5>Lorem ipsum</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-          </div>
-        </div>
-        <div class="elemento image-wrapper col-10 col-md-2">
-          <p>&nbsp;</p>
-        </div>
-        <div class="elemento_s5 image-wrapper col-10 col-md-4">
-          <div id="imgbox" class="">
-            <img src="img/seccion1.4.jpg" alt="">
-          </div>
-          <br>
-          <div id="imgbox" class="">
-            <h5>Lorem ipsum</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-          </div>
-        </div>
-      </div>
-    </div>
-      <div id="gallery2" class="section3 s10">
-        <div id="demo2" class="carousel slide" data-ride="carousel">
-          <ul class="carousel-indicators item_s8">
-            <li data-target="#demo2" data-slide-to="0" class="active"></li>
-            <li data-target="#demo2" data-slide-to="1"></li>
-          </ul>
-          <div id="galeria" class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/g10.jpg" alt="" width="1100" height="500">
-              <div class="carousel-caption">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img/g11.jpg" alt="" width="1100" height="500">
-              <div class="carousel-caption">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    <div class="section11 col-12 col-md-12">
-      <h1>REMODELACIÓN, AMBIENTACIÓN, MONTAJE</h1>
-    </div>
-    <br><br>
-    <div id="contacto" class="contenedor col-md-11">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <br>
-            <h3 class="text-center">
-              Información de contacto
-            </h3>
-            <br><br>
-          </div>
-        </div>
-        <div class="section12 row">
-          <div class="col-md-6">
-            <dl>
-              <dt>
-                Dirección
-              </dt>
-              <br>
-              <dd>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              </dd>
-              <br>
-              <br>
-              <dt>
-                Correo para consultas
-              </dt>
-              <br>
-              <dd>
-                info@konfortdesign.com
-              </dd>
-              <br>
-              <dt>
-                Télefono
-              </dt>
-              <br>
-              <dd>
-                (+506) **** ****
-              </dd>
-            </dl>
-          </div>
-          <div class="col-md-6">
-            <dl>
-              <dt>
-                KONFORT
-              </dt>
-              <br>
-              <dd>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                <br>
-                <br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                <br>
-              </dd>
-            </dl>
-          </div>
-        </div>
-        <br><br>
-        <br><br>
-      </div>
-    </div>
-    <br><br>
-    <br><br>
-    <br><br>
   </div>
+  <div id="adriana" class="container section4 col-12 col-md-12">
+    <br>
+    <br>
+    <h1>INTERIORISTA</h1>
+    <br>
+    <div class="row wrapper justify-content-center">
+      <div class="elemento image-wrapper col-12 col-md-6">
+        <img class="img_fg" src="img/Seccion3.1.jpg" alt="">
+      </div>
+      <div class="elemento image-wrapper col-12 col-md-6">
+        <img class="img_fg" src="img/Seccion3.2.jpg" alt="">
+      </div>
+    </div>
+    <div class="elemento_txt2 col-sm-12 col-md-3"><span>EQUIPO FAMILIAR</span><br> PASIÓN Y AMOR CREANDO<br></div>
+  </div>
+  <div class="container section4 col-12 col-md-12">
+    <br>
+    <br>
+    <h1>APASIONADA</h1>
+    <br>
+    <div class="row wrapper justify-content-center">
+      <div class="elemento image-wrapper col-12 col-md-6">
+        <img class="img_fg" src="img/Seccion3.3.jpg" alt="">
+      </div>
+      <div class="elemento image-wrapper col-12 col-md-6">
+        <img class="img_fg" src="img/Seccion3.4.jpg" alt="">
+      </div>
+    </div>
+    <div class="elemento_txt2 col-sm-12 col-md-3"><span>AMANTE DE LA VIDA</span><br> del diseño y de espacios para todos<br></div>
+  </div>
+  <div id="gallery2" class="section3 s10">
+    <div id="demo2" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators item_s8">
+        <li data-target="#demo2" data-slide-to="0" class="active"></li>
+        <li data-target="#demo2" data-slide-to="1"></li>
+      </ul>
+      <div id="galeria" class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/g10.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/g11.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section11 col-12 col-md-12">
+    <h1>REMODELACIÓN, AMBIENTACIÓN, BUEN GUSTO</h1>
+  </div>
+  <br><br>
+  <div id="contacto" class="contactos contenedor col-md-12">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <br>
+          <h3 class="text-center">
+            Información de contacto
+          </h3>
+          <br><br>
+        </div>
+      </div>
+      <div class="section12 row">
+        <div class="col-md-6 barra">
+          <dl>
+            <dt class="tileC">
+              Contacte con nosotros
+            </dt>
+            <br>
+            <dd>
+              <form class="formC" action="https://formspree.io/xyyndkpd" method="POST">
+                <label class="col-md-10">
+                  <input type="text" placeholder="NOMBRE">
+                </label>
+                <label class="col-md-10">
+                  <input type="text" name="_replyto" placeholder="CORREO">
+                </label>
+                <label class="col-md-10">
+                  <textarea name="message" placeholder="MENSAJE"></textarea>
+                </label>
+                <button class="col-md-8 enviar" type="submit">ENVIAR</button>
+              </form>
+            </dd>
+            <br>
+            <br>
+          </dl>
+        </div>
+        <div class="col-md-6">
+          <dl>
+            <dt>
+              Ubicación
+            </dt>
+            <br>
+            <dd>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15720.07152171749!2d-84.14644228084457!3d9.932468572539923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fc7bbae164a1%3A0x5c99e2916953e7a1!2sKonfort%20Escaz%C3%BA!5e0!3m2!1ses!2scr!4v1593117595654!5m2!1ses!2scr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <br>
+              Correo: adriana@konfortdesing.com
+              <br>
+              Télefono: (506) 2228-6076
+              <br>
+            </dd>
+          </dl>
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <br><br>
+  <br><br>
+  <br><br>
+</div>
+<div class="section13 col-md-12">
+  <p>CREADO POR GEKOLEGEND / 2020</p>
+</div>
 </body>
-<footer>
-  <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_smooth_scroll"></a>
-  <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_gourmet_catering&stacked=h"></a>
-</footer>
 </html>
