--- a/index.html
+++ b/index.html
@@ -202,12 +202,82 @@
       </ul>
       <div id="galeria" class="carousel-inner">
         <div class="carousel-item active">
+          <img src="img/g1.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g2.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g3.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g4.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g5.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g6.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g7.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g8.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g9.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
           <img src="img/g10.jpg" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
         <div class="carousel-item">
           <img src="img/g11.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g12.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g13.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g14.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g15.jpg" alt="" width="1100" height="500">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item active">
+          <img src="img/g16.jpg" alt="" width="1100" height="500">
           <div class="carousel-caption">
           </div>
         </div>
@@ -275,6 +345,7 @@
       <br><br>
     </div>
   </div>
+
 </div>
 <div class="section13 col-md-12">
   <p>CREADO POR GEKOLEGEND / 2020</p>
