--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <label class="col-md-10">
                   <textarea name="message" placeholder="MENSAJE"></textarea>
                 </label>
-                <button class="col-md-8 enviar" type="submit">ENVIAR</button>
+                <button class="col-sm-11 col-md-9 enviar" type="submit">ENVIAR</button>
               </form>
             </dd>
             <br>
@@ -343,14 +343,14 @@
             <dt>
               Ubicación
             </dt>
-            <br>
             <dd>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15720.07152171749!2d-84.14644228084457!3d9.932468572539923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fc7bbae164a1%3A0x5c99e2916953e7a1!2sKonfort%20Escaz%C3%BA!5e0!3m2!1ses!2scr!4v1593117595654!5m2!1ses!2scr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
               <br>
               Correo: adriana@konfortdesing.com
               <br>
               Télefono: (506) 2228-6076
               <br>
+              <br>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15720.07152171749!2d-84.14644228084457!3d9.932468572539923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fc7bbae164a1%3A0x5c99e2916953e7a1!2sKonfort%20Escaz%C3%BA!5e0!3m2!1ses!2scr!4v1593117595654!5m2!1ses!2scr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </dd>
           </dl>
         </div>
