--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="img/ico.png">
 </head>
 <header>
 </header>
@@ -23,7 +24,7 @@
     <br>
     <p>Visitenos en San Rafel de Escazú, centro comercial Los Pinos</p>
   </div>
-  <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav justify-content-end navbar-inverse" data-spy="affix" data-offset-top="20">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav justify-content-end navbar-inverse" data-spy="affix" data-offset-top="8">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
