--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="esp" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>KONFORT</title>
+  <title>ADRIANA GUERRERO</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
