--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="container justify-content-center">
+      <div class="container justify-content-center col-lg-12">
         <ul class="nav navbar-nav flex-fill justify-content-center">
           <li class="nav-item">
             <a class="nav-link active title_second" href="#portafolio">PORTAFOLIO</a>
