--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     <div class="txt_section1">
       <p class="txt_imgmain">DISEÑO Y <br> AMBIENTACIÓN</p>
       <br>
-      <a class="catalogodiv" href="#portafolio"><div class="catalogo col-4"> &nbsp;</div></a>
+      <a class="catalogodiv" href="#portfolio"><div class="catalogo col-4"> &nbsp;</div></a>
     </div>
   </div>
   <div class="section2">
     <br>
-    <p>"Cada espacio merece un brillo único, que al entrar digas: ¡es espectacular!
+    <p id="portfolio">"Cada espacio merece un brillo único, que al entrar digas: ¡es espectacular!
       <br>
       El hogar es el mejor espacio para invertir porque es donde
       <br>
