--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
   <div class="section2">
     <br>
-    <p id="portfolio">"Cada espacio merece un brillo único, que al entrar digas: ¡es espectacular!
+    <p>"Cada espacio merece un brillo único, que al entrar digas: ¡es espectacular!
       <br>
       El hogar es el mejor espacio para invertir porque es donde
       <br>
@@ -67,6 +67,7 @@
       <br>
       <br>
       — ADRIANA GUERRERO —
+      <span id="portfolio"></span>
     </p>
     <br>
   </div>
